--- a/Primeiro/index.html
+++ b/Primeiro/index.html
@@ -12,11 +12,31 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao ativo">Cursos na Alura</button>
-            <button class="botao">Criar projetos em Javascript</button>
-            <button class="botao">Criar um portfolio</button>
-            <button class="botao">Atualizar meu currículo</button>
+            <button class="botao ativo">Passar no Enem</button>
+            <button class="botao">Treinar bastante</button>
+            <button class="botao">Fazer Faculdade</button>
+            <button class="botao">Ficar mais tempo com minha familia</button>
         </div>
+        <div class="abas-textos">
+            <div class="abas-conteudos ativo">
+                <h3 class="abas-conteudo-titulo-principal">Ter Mais Foco</h3>
+                <h4 class="abas-conteudo-titulo-principal">Estudar Mais</h4>
+            </div>
+            <div class="abas-conteudos">
+                <h3 class="abas-conteudo-titulo-principal">Ter Mais Foco</h3>
+                <h4 class="abas-conteudo-titulo-principal">Estudar Mais</h4>
+            </div>
+            <div class="abas-conteudos">
+                <h3 class="abas-conteudo-titulo-principal">Ter Mais Foco</h3>
+                <h4 class="abas-conteudo-titulo-principal">Estudar Mais</h4>
+            </div>
+            <div class="abas-conteudos">
+                <h3 class="abas-conteudo-titulo-principal">Ter Mais Foco</h3>
+                <h4 class="abas-conteudo-titulo-principal">Estudar Mais</h4>
+            </div>
+        </div>
+        
+        
     </section>
     <script src="main.js"></script>
 </body>
