--- a/Primeiro/index.html
+++ b/Primeiro/index.html
@@ -17,6 +17,7 @@
             <button class="botao">Fazer Faculdade</button>
             <button class="botao">Ficar mais tempo com minha familia</button>
         </div>
+        <div class="aba-conteudo-ativo">
         <div class="abas-textos">
             <div class="abas-conteudos ativo">
                 <h3 class="abas-conteudo-titulo-principal">Ter Mais Foco</h3>
@@ -34,6 +35,7 @@
                 <h3 class="abas-conteudo-titulo-principal">Ter Mais Foco</h3>
                 <h4 class="abas-conteudo-titulo-principal">Estudar Mais</h4>
             </div>
+        </div>
         </div>
         
         
