--- a/Primeiro/index.html
+++ b/Primeiro/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus objetivos do ano</title>
-    <link rel="stylesheet" href="style.css">
+    <div class="conteudo">
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,28 +19,28 @@
             <button class="botao">Ficar mais tempo com minha familia</button>
         </div>
         <div class="aba-conteudo-ativo">
-        <div class="abas-textos">
-            <div class="abas-conteudos ativo">
-                <h3 class="abas-conteudo-titulo-principal">Ter Mais Foco</h3>
-                <h4 class="abas-conteudo-titulo-principal">Estudar Mais</h4>
-            </div>
-            <div class="abas-conteudos">
-                <h3 class="abas-conteudo-titulo-principal">Ter Mais Foco</h3>
-                <h4 class="abas-conteudo-titulo-principal">Estudar Mais</h4>
-            </div>
-            <div class="abas-conteudos">
-                <h3 class="abas-conteudo-titulo-principal">Ter Mais Foco</h3>
-                <h4 class="abas-conteudo-titulo-principal">Estudar Mais</h4>
-            </div>
-            <div class="abas-conteudos">
-                <h3 class="abas-conteudo-titulo-principal">Ter Mais Foco</h3>
-                <h4 class="abas-conteudo-titulo-principal">Estudar Mais</h4>
+            <div class="abas-textos">
+                <div class="abas-conteudos ativo">
+                    <h3 class="abas-conteudo-titulo-principal">Passar no Enem</h3>
+                    <h4 class="abas-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                </div>
+                <div class="abas-conteudos">
+                    <h3 class="abas-conteudo-titulo-principal">Treinar bastante</h3>
+                    <h4 class="abas-conteudo-titulo-secundario">Estudar Mais</h4>
+                </div>
+                <div class="abas-conteudos">
+                    <h3 class="abas-conteudo-titulo-principal">Fazer Faculdade</h3>
+                    <h4 class="abas-conteudo-titulo-secundario">Estudar Mais</h4>
+                </div>
+                <div class="abas-conteudos">
+                    <h3 class="abas-conteudo-titulo-principal">Ficar mais tempo com minha familia</h3>
+                    <h4 class="abas-conteudo-titulo-secundario">Estudar Mais</h4>
+                </div>
             </div>
         </div>
-        </div>
-        
-        
+
     </section>
     <script src="main.js"></script>
 </body>
+
 </html>
