--- a/Primeiro/index.html
+++ b/Primeiro/index.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
-    <div class="conteudo">
-        <link rel="stylesheet" href="style.css">
+    <title>Meus Objetivos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+        <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">Passar no Enem</button>
-            <button class="botao">Treinar bastante</button>
-            <button class="botao">Fazer Faculdade</button>
-            <button class="botao">Ficar mais tempo com minha familia</button>
+            <button class="botao ativo">PCZAO DE CRIA NO FIM DO ANO</button>
+            <button class="botao">TOTOTORO MAX VERSTAPPEN</button>
+            <button class="botao">GAMEPLAY DE CS IGUAL AO O DONK666</button>
+            <button class="botao">ESTRATEGIAS DA MCLAREN</button>
         </div>
         <div class="aba-conteudo-ativo">
-            <div class="abas-textos">
-                <div class="abas-conteudos ativo">
-                    <h3 class="abas-conteudo-titulo-principal">Passar no Enem</h3>
-                    <h4 class="abas-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                </div>
-                <div class="abas-conteudos">
-                    <h3 class="abas-conteudo-titulo-principal">Treinar bastante</h3>
-                    <h4 class="abas-conteudo-titulo-secundario">Estudar Mais</h4>
-                </div>
-                <div class="abas-conteudos">
-                    <h3 class="abas-conteudo-titulo-principal">Fazer Faculdade</h3>
-                    <h4 class="abas-conteudo-titulo-secundario">Estudar Mais</h4>
-                </div>
-                <div class="abas-conteudos">
-                    <h3 class="abas-conteudo-titulo-principal">Ficar mais tempo com minha familia</h3>
-                    <h4 class="abas-conteudo-titulo-secundario">Estudar Mais</h4>
-                </div>
+        <div class="abas-textos">
+            <div class="aba-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
             </div>
         </div>
-
+        </div>
+    </div>
     </section>
     <script src="main.js"></script>
 </body>
-
 </html>
