--- a/gago-3b-main/Primeiro/index.html
+++ b/gago-3b-main/Primeiro/index.html
@@ -11,10 +11,10 @@
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">PCZAO DE CRIA NO FIM DO ANO</button>
-            <button class="botao">TOTOTORO MAX VERSTAPPEN</button>
-            <button class="botao">GAMEPLAY DE CS IGUAL AO O DONK666</button>
-            <button class="botao">ESTRATEGIAS DA MCLAREN</button>
+            <button class="botao ativo">GAGUIN</button>
+            <button class="botao">LEVEL 7 FACEIT</button>
+            <button class="botao">POPOPO</button>
+            <button class="botao">E SOME</button>
         </div>
         <div class="aba-conteudo-ativo">
         <div class="abas-textos">
@@ -22,6 +22,10 @@
                 <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                 <div class="contador"></div>
+                <div class="contador-digito">
+                  <p class="contador-digito-numero" id="dias0">7</p>  
+                  <p class="contador-digito-texto">dias</p>
+                </div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
