--- a/gago-3b-main/Primeiro/index.html
+++ b/gago-3b-main/Primeiro/index.html
@@ -6,46 +6,61 @@
     <title>Meus Objetivos</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
-        <div class="conteudo">
-        <div class="botoes">
-            <button class="botao ativo">GAGUIN</button>
-            <button class="botao">LEVEL 7 FACEIT</button>
-            <button class="botao">POPOPO</button>
-            <button class="botao">E SOME</button>
-        </div>
-        <div class="aba-conteudo-ativo">
-        <div class="abas-textos">
-            <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
-                <div class="contador-digito">
-                  <p class="contador-digito-numero" id="dias0">7</p>  
-                  <p class="contador-digito-texto">dias</p>
+    <body>
+        <section class="conteudo-principal">
+            <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+            <div class="conteudo">
+                <div class="botoes">
+                    <button class="botao ativo">pagar o mouse do monesy da shoppe</button>
+                    <button class="botao">subir arena no clash</button>
+                    <button class="botao">traquinas gadoceta</button>
+                    <button class="botao">ruanconha</button>
+                </div>
+                <div class="abas-textos">
+                    <div class="aba-conteudo ativo">
+                        <h3 class="aba-conteudo-titulo-principal">PEGA OS ALEMAO NA BALA</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                        <div class="contador">
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero" id="dias0">7</p>
+                                <p class="contador-digito-texto">dias</p>
+                            </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero" id="horas0">7</p>
+                                <p class="contador-digito-texto">horas</p>
+                            </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero" id="min0">7</p>
+                                <p class="contador-digito-texto">min</p>
+                            </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero" id="seg0">7</p>
+                                <p class="contador-digito-texto">seg</p>
+                            </div>
+                        </div>
+                    </div>
+                        </div>
+                    </div>
+                    <div class="aba-conteudo">
+                        <h3 class="aba-conteudo-titulo-principal">Manter minhas contas em dia</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                        <div class="contador"></div>
+                    </div>
+                    <div class="aba-conteudo">
+                        <h3 class="aba-conteudo-titulo-principal">Continuar a ser pontual e profissional</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                        <div class="contador"></div>
+                    </div>
+                    <div class="aba-conteudo">
+                        <h3 class="aba-conteudo-titulo-principal">Ter mais tempo para a família</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                        <div class="contador"></div>
+                    </div>
+    
                 </div>
             </div>
-            <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
-            </div>
-            <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
-            </div>
-            <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
-            </div>
-        </div>
-        </div>
-    </div>
-    </section>
-    <script src="main.js"></script>
-</body>
+        </section>
+    
+        <script src="main.js"></script>
+    </body>
 </html>
